@@ -1,0 +1,36 @@
+-----BEGIN RSA PRIVATE KEY-----
+MIICXAIBAAKBgQDW9D6FdUxYPW8yXn73oFeQaCBVE/lg0NkJMIHqxwABXZXk2+t8
+1Uerc70PoXaY9ch44jrVR9rPNJf5SVJ1begksqBgRCattUP5RHSuPWgJNFoduqRa
+qgk5NV5e9+6K+Hwphv8e2oB7qUDEKB1cEsbk07FzM9z2raJihndDvbEEpwIDAQAB
+AoGAUFI6HpKDMaHbMD4hQZS3w601D7WEBQplX0qx8THlLZ1zym3nI+Fqg4WfCv0x
+nNySyaD3jQTpnW2wsCUW2+xyxrwdfQACrRortAHAmbmi7R5q46nNLH4kk/70L8Kp
+hLsMFyJkbQM/u8GcztjBVCM09CF1aC3Q+1atCVhUL+IMJoECQQD47aEFo3kmQMsV
+c7WvR1i5zgn6UmKgejspN/sbMpy8jtULZy1CAuL+NSjlfoFiP6+X2bATDbK4ig1e
+aeuhIUhnAkEA3Q+IW3Dzt1Ll9FTYoI+oXPE53lr0uwz9MfWAUZfBvMKP6CjWfiEM
+yK+hWU2cA6JHiKlHTVSETaeW7VlkdyG5wQJAQ1b9ZWoYvvluNuprbvRNE06isl4R
+IjqOwJLNUkk5z2SQS5poyt+/CmfVHWhAlhSGavzPvgfJnlRyU2UyAg/f5wJAG+z1
+Zc/MCfGf+RCq2QWs2CjlDZDh76tBZQlFb4lDQSw277YQ+pgEPGnrcRObzN24Oaxg
+xIUTvZeZOlybk20gQQJBAIOWXXUqvWAlmgPPga/719t9ilumn4I+01gB9/YjbudS
+onTEfVFVdjHQAxQwJG1fvzeW878SoQekIVGrIEqD99E=
+-----END RSA PRIVATE KEY-----
+-----BEGIN CERTIFICATE-----
+MIIDfjCCAuegAwIBAgIJAPpmOqeE6TPHMA0GCSqGSIb3DQEBBAUAMIGHMQswCQYD
+VQQGEwJVUzERMA8GA1UECBMITWlzc291cmkxFDASBgNVBAcTC0thbnNhcyBDaXR5
+MSEwHwYDVQQKExhJbnRlcm5ldCBXaWRnaXRzIFB0eSBMdGQxDjAMBgNVBAMTBVNj
+b3R0MRwwGgYJKoZIhvcNAQkBFg1ibGFoQG5vbmUuY29tMB4XDTA1MTAyOTA5MDgy
+OFoXDTA2MTAyOTA5MDgyOFowgYcxCzAJBgNVBAYTAlVTMREwDwYDVQQIEwhNaXNz
+b3VyaTEUMBIGA1UEBxMLS2Fuc2FzIENpdHkxITAfBgNVBAoTGEludGVybmV0IFdp
+ZGdpdHMgUHR5IEx0ZDEOMAwGA1UEAxMFU2NvdHQxHDAaBgkqhkiG9w0BCQEWDWJs
+YWhAbm9uZS5jb20wgZ8wDQYJKoZIhvcNAQEBBQADgY0AMIGJAoGBANb0PoV1TFg9
+bzJefvegV5BoIFUT+WDQ2QkwgerHAAFdleTb63zVR6tzvQ+hdpj1yHjiOtVH2s80
+l/lJUnVt6CSyoGBEJq21Q/lEdK49aAk0Wh26pFqqCTk1Xl737or4fCmG/x7agHup
+QMQoHVwSxuTTsXMz3PatomKGd0O9sQSnAgMBAAGjge8wgewwHQYDVR0OBBYEFAgk
+EOg3PfgEgV7XIcx1dXCr+agHMIG8BgNVHSMEgbQwgbGAFAgkEOg3PfgEgV7XIcx1
+dXCr+agHoYGNpIGKMIGHMQswCQYDVQQGEwJVUzERMA8GA1UECBMITWlzc291cmkx
+FDASBgNVBAcTC0thbnNhcyBDaXR5MSEwHwYDVQQKExhJbnRlcm5ldCBXaWRnaXRz
+IFB0eSBMdGQxDjAMBgNVBAMTBVNjb3R0MRwwGgYJKoZIhvcNAQkBFg1ibGFoQG5v
+bmUuY29tggkA+mY6p4TpM8cwDAYDVR0TBAUwAwEB/zANBgkqhkiG9w0BAQQFAAOB
+gQBQeJPOJ2G2lWVFEni7tL+4ooLNFhLWKNkw5kEnoDUSRvZuLmR/XkRbIgydfTzJ
+HjE64R//vK/6QWz84tq1HLyN8MmrutRtJ/2HmpEiYlWUEhCZhzb/kmuSg99aHqdZ
+UZ+ZBbIuRvwSjdolzgr1daota+vEON6Md3ghJiIGdne7+g==
+-----END CERTIFICATE-----
